引入建造者模式，实现span类的属性动态注入

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>CallRope-core</module>
         <module>CallRope-agent</module>
         <module>CallRope-example</module>
+        <module>CallRope-http-example</module>
     </modules>
 
     <properties>
