--- a/CallRope-core/pom.xml
+++ b/CallRope-core/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>CallRope-spy</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>zql.CallRope</groupId>
+            <artifactId>CallRope-http-example</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
