跨线程传递数据组件定义完成

--- a/CallRope-example/pom.xml
+++ b/CallRope-example/pom.xml
@@ -15,5 +15,11 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>zql.CallRope</groupId>
+            <artifactId>CallRope-spy</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 </project>
