--- a/CallRope-example/pom.xml
+++ b/CallRope-example/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>CallRope-spy</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>zql.CallRope</groupId>
+            <artifactId>CallRope-core</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
