--- a/CallRope-http-example/pom.xml
+++ b/CallRope-http-example/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>transmittable-thread-local</artifactId>
             <version>2.14.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.9</version>
+        </dependency>
     </dependencies>
 
     <build>
